EC-T-6 | Dockerized api using Docker and docker-compose  - Fixes #6

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+SPRING_PROFILES_ACTIVE=dev
+
     ## MySQL CONFIG
 # DATABASE_TYPE: mysql
 # DATASOURCE_URL: jdbc:mysql://localhost:3306/ecomie_db
@@ -15,6 +17,7 @@
     ## POSTGRESQL DOCKER CONFIG
 DATABASE_TYPE: postgresql
 DATASOURCE_URL: jdbc:postgresql://postgres:5432/ecomie_db
+DATASOURCE_URL_FOR_DOCKER: jdbc:postgresql://ecomie-db:5432/ecomie_db
 DATASOURCE_USERNAME: postgres
 DATASOURCE_PASSWORD: postgresPassword
 DATASOURCE_DRIVERCLASSNAME: org.postgresql.Driver
