--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,22 @@
 version: "3.8"
 services:
-  ecomie-service:
-    container_name: ecomie-service
+  ecomie-api:
+    container_name: ecomie-api
     build:
-      context: ./
+      context: .
+      dockerfile: ./Dockerfile
+#    env_file:
+#      - ./.env
     volumes:
       - .:/build
 #      - /build/target
     ports:
       - "8081:8081"
     environment:
+      SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
       ## POSTGRESQL DOCKER CONFIG
       DATABASE_TYPE: ${DATABASE_TYPE}
-      DATASOURCE_URL: ${DATASOURCE_URL}
+      DATASOURCE_URL: ${DATASOURCE_URL_FOR_DOCKER}
       DATASOURCE_USERNAME: ${DATASOURCE_USERNAME}
       DATASOURCE_PASSWORD: ${DATASOURCE_PASSWORD}
       DATASOURCE_DRIVERCLASSNAME: ${DATASOURCE_DRIVERCLASSNAME}
@@ -29,7 +33,7 @@ services:
       ## JWT  CONFIG
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       SECRET_KEY: ${SECRET_KEY}
-      REFRESH_TOKEN_DURATION_IN_MINUTES: ${REFRESH_TOKEN_DURATION_IN_MINUTES}
+      REFRESH_TOKEN_DURATION_IN_MINUTES: ${ACCESS_TOKEN_DURATION_IN_MINUTES}
       ACCESS_TOKEN_DURATION_IN_DAYS: ${ACCESS_TOKEN_DURATION_IN_DAYS}
       ACCESS_TOKEN_DURATION_IN_MINUTES: ${ACCESS_TOKEN_DURATION_IN_MINUTES}
       ## SUPER ADMIN DETAILS CONFIG
@@ -43,21 +47,25 @@ services:
       SUPER_ADMIN_REGION: ${SUPER_ADMIN_REGION}
       SUPER_ADMIN_CITY: ${SUPER_ADMIN_CITY}
       SUPER_ADMIN_LANGUAGE: ${SUPER_ADMIN_LANGUAGE}
+      SUPER_ADMIN_STREET_ADDRESS: ${SUPER_ADMIN_STREET_ADDRESS}
+
       ## IMAGE CONFIG
       IMAGE_DIR: ${IMAGE_DIR}
 #    stdin_open: true
 #    tty: true
     depends_on:
-      - postgres
+      - ecomie-db
 #        condition: service_healthy
     networks:
       - ecomie-network
 
-  postgres:
-    container_name: ecomie-database
+  ecomie-db:
+    container_name: ecomie-db
     image: postgres
     ports:
       - "5433:5432"
+#    env_file:
+#      - ./.env
     volumes:
       - ./data/backup:/var/lib/postgresql/backup
 #    healthcheck:
