--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,10 @@
 SPRING_PROFILES_ACTIVE=dev
 
+
+LOCAL_SERVER=localhost:8081
+DEV_SERVER="$EC2_PUBLIC_IP"
+PROD_SERVER=localhost:8081
+
     ## MySQL CONFIG
 # DATABASE_TYPE: mysql
 # DATASOURCE_URL: jdbc:mysql://localhost:3306/ecomie_db
@@ -14,9 +19,10 @@ SPRING_PROFILES_ACTIVE=dev
 # DATASOURCE_PASSWORD: {YOUR_DATABASE_PASSWORD}
 # DATASOURCE_DRIVERCLASSNAME: org.postgresql.Driver
 
-    ## POSTGRESQL DOCKER CONFIG
+## POSTGRESQL DOCKER CONFIG
 DATABASE_TYPE: postgresql
-DATASOURCE_URL: jdbc:postgresql://postgres:5432/ecomie_db
+#DATASOURCE_URL: jdbc:postgresql://postgres:5432/ecomie_db
+DATASOURCE_URL: jdbc:postgresql://localhost:5433/ecomie_db
 DATASOURCE_URL_FOR_DOCKER: jdbc:postgresql://ecomie-db:5432/ecomie_db
 DATASOURCE_USERNAME: postgres
 DATASOURCE_PASSWORD: postgresPassword
@@ -24,6 +30,7 @@ DATASOURCE_DRIVERCLASSNAME: org.postgresql.Driver
 
     ## PORT CONFIG
 PORT: 8081
+HTTP_PORT: 80
 
     ## MAILING CONFIG
 MAIL_ADDRESS: {YOUR_EMAIL_ADDRESS}
