--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,6 +76,10 @@ super.admin.phone-number=${SUPER_ADMIN_PHONE_NUMBER}
 logging.level.org.springframework.cloud=DEBUG
 logging.level.org.springframework.security=DEBUG
 
+cors.allowed-origins.local=${CORS_ALLOWED_ORIGINS_LOCAL}
+cors.allowed-origins.dev=${CORS_ALLOWED_ORIGINS_DEV}
+cors.allowed-origins.prod=${CORS_ALLOWED_ORIGINS_PROD}
+
 #spring.datasource.test-on-borrow=true
 #spring.datasource.validation-query=SELECT 1;
 #spring.datasource.validation-interval=30000
