--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-SPRING_PROFILES_ACTIVE=dev
+SPRING_PROFILES_ACTIVE: dev
 
 
-LOCAL_SERVER=localhost:8081
-DEV_SERVER="$EC2_PUBLIC_IP"
-PROD_SERVER=localhost:8081
+LOCAL_SERVER: http://localhost:8081
+DEV_SERVER: $EC2_PUBLIC_IP
+PROD_SERVER: http://localhost:8081
 
     ## MySQL CONFIG
 # DATABASE_TYPE: mysql
@@ -64,3 +64,8 @@ SUPER_ADMIN_LANGUAGE: {LANGUAGE}
 
     ## IMAGE CONFIG
 IMAGE_DIR: {IMAGE_DIRECTORY}
+
+## CORS
+CORS_ALLOWED_ORIGINS_LOCAL: {FRONT_END_LOCAL}
+CORS_ALLOWED_ORIGINS_DEV: {FRONT_END_DEV}
+CORS_ALLOWED_ORIGINS_PROD: {FRONT_END_PROD}
