--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -76,9 +76,12 @@ super.admin.phone-number=${SUPER_ADMIN_PHONE_NUMBER}
 logging.level.org.springframework.cloud=DEBUG
 logging.level.org.springframework.security=DEBUG
 
-cors.allowed-origins.local=${CORS_ALLOWED_ORIGINS_LOCAL}
+cors.allowed-origins.local-one=${CORS_ALLOWED_ORIGINS_LOCAL_ONE}
+cors.allowed-origins.local-two=${CORS_ALLOWED_ORIGINS_LOCAL_TWO}
 cors.allowed-origins.dev=${CORS_ALLOWED_ORIGINS_DEV}
 cors.allowed-origins.prod=${CORS_ALLOWED_ORIGINS_PROD}
+
+app.logo.url=${APP_LOGO_URL}
 
 #spring.datasource.test-on-borrow=true
 #spring.datasource.validation-query=SELECT 1;
