--- a/.env.example
+++ b/.env.example
@@ -71,4 +71,4 @@ CORS_ALLOWED_ORIGINS_LOCAL_TWO: {FRONT_END_LOCAL_TWO}
 CORS_ALLOWED_ORIGINS_DEV: {FRONT_END_DEV}
 CORS_ALLOWED_ORIGINS_PROD: {FRONT_END_PROD}
 
-APP_LOGO_URL: https://images.app.goo.gl/riHuwZJwoTu4rbvh8
+APP_LOGO_URL: {ECOMIE_LOGO}
