EC-T-12 | Signup Email Template (#14)
* EC-T-12 | Added and email template to confirm email address on signup - Fixes #12

--- a/.env.example
+++ b/.env.example
@@ -66,6 +66,9 @@ SUPER_ADMIN_LANGUAGE: {LANGUAGE}
 IMAGE_DIR: {IMAGE_DIRECTORY}
 
 ## CORS
-CORS_ALLOWED_ORIGINS_LOCAL: {FRONT_END_LOCAL}
+CORS_ALLOWED_ORIGINS_LOCAL_ONE: {FRONT_END_LOCAL_ONE}
+CORS_ALLOWED_ORIGINS_LOCAL_TWO: {FRONT_END_LOCAL_TWO}
 CORS_ALLOWED_ORIGINS_DEV: {FRONT_END_DEV}
 CORS_ALLOWED_ORIGINS_PROD: {FRONT_END_PROD}
+
+APP_LOGO_URL: {ECOMIE_LOGO}
