--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE}
 
 
 ## JWT ENV
-spring.security.user.password=password
+spring.security.userEntity.password=password
 ecomie.jwt.secret-key=${JWT_SECRET_KEY}
 ecomie.jwt.access-token.duration.days=${ACCESS_TOKEN_DURATION_IN_DAYS}
 ecomie.jwt.access-token.duration.minutes=${ACCESS_TOKEN_DURATION_IN_MINUTES}
@@ -57,9 +57,9 @@ app.profile.pics.dir=${IMAGE_DIR}
 # Threshold after which files are written to disk.
 spring.servlet.multipart.file-size-threshold=500B
 # Max file size.
-spring.servlet.multipart.max-file-size=6MB
+spring.servlet.multipart.max-file-size=1MB
 # Max Request Size
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-request-size=2MB
 
 #SuperAdmin Profile
 super.admin.first-name=${SUPER_ADMIN_LAST_NAME}
