--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,9 @@
 version: "3.8"
+
+volumes:
+  postgres-data:
+    driver: local
+
 services:
   ecomie-api:
     container_name: ecomie-api
@@ -29,7 +34,7 @@ services:
       - ./.env
     volumes:
       - ./.env:/app/.env
-      - ./data/backup:/var/lib/postgresql/backup
+      - postgres-data:/var/lib/postgresql/data
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U ${DATASOURCE_USERNAME}" ]
       interval: 5s
