--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -48,6 +48,11 @@ spring.mail.username=${MAIL_ADDRESS}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=${MAIL_PROP_SMTP_AUTH}
 spring.mail.properties.mail.smtp.starttls.enable=${MAIL_PROP_SMTP_STARTTLS}
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+spring.mail.properties.mail.smtp.socketFactory.port=465
+spring.mail.properties.mail.smtp.socketFactory.class =javax.net.ssl.SSLSocketFactory
 
 ### MULTIPART (MultipartProperties)
 # Enable multipart uploads
