--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -86,6 +86,9 @@ cors.allowed-origins.local-two=${CORS_ALLOWED_ORIGINS_LOCAL_TWO}
 cors.allowed-origins.dev=${CORS_ALLOWED_ORIGINS_DEV}
 cors.allowed-origins.prod=${CORS_ALLOWED_ORIGINS_PROD}
 
+email-verification.token.duration=${EMAIL_VERIFICATION_TOKEN_DURATION_IN_MINUTES}
+password-reset.token.duration=${PASSWORD_RESET_TOKEN_DURATION_IN_MINUTES}
+
 app.logo.url=${APP_LOGO_URL}
 
 #spring.datasource.test-on-borrow=true
