EC-000 | WIP - User Tokens and Liquibase Migrations

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
 	<description>API for the ECOMIE application</description>
 	<properties>
 		<java.version>23</java.version>
+		<!-- Database properties from environment variables -->
+		<db.driver>${env.DATASOURCE_DRIVERCLASSNAME}</db.driver>
+		<db.url>${env.DATASOURCE_URL}</db.url>
+		<db.username>${env.DATASOURCE_USERNAME}</db.username>
+		<db.password>${env.DATASOURCE_PASSWORD}</db.password>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -46,6 +51,11 @@
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<scope>runtime</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.liquibase</groupId>
+			<artifactId>liquibase-core</artifactId>
+			<version>4.27.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -202,19 +212,20 @@
 					</annotationProcessorPaths>
 				</configuration>
 			</plugin>
-<!--			<plugin>-->
-<!--				<groupId>org.apache.maven.plugins</groupId>-->
-<!--				<artifactId>maven-compiler-plugin</artifactId>-->
-<!--				<configuration>-->
-<!--					<annotationProcessorPaths>-->
-<!--						<path>-->
-<!--							<groupId>org.mapstruct</groupId>-->
-<!--							<artifactId>mapstruct-processor</artifactId>-->
-<!--							<version>1.6.0.Beta1</version>-->
-<!--						</path>-->
-<!--					</annotationProcessorPaths>-->
-<!--				</configuration>-->
-<!--			</plugin>-->
+			<plugin>
+				<groupId>org.liquibase</groupId>
+				<artifactId>liquibase-maven-plugin</artifactId>
+				<version>4.27.0</version>
+				<configuration>
+					<!-- Using environment variables loaded from .env file -->
+					<driver>${db.driver}</driver>
+					<url>${db.url}</url>
+					<username>${db.username}</username>
+					<password>${db.password}</password>
+					<changeLogFile>src/main/resources/migration/db.changelog-dev.xml</changeLogFile>
+					<outputChangeLogFile>src/main/resources/migration/ddl/ddl-000-existing-database-migration.xml</outputChangeLogFile>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
