--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -71,6 +71,7 @@ super.admin.first-name=${SUPER_ADMIN_LAST_NAME}
 super.admin.last-name=${SUPER_ADMIN_FIRST_NAME}
 super.admin.email=${SUPER_ADMIN_EMAIL}
 super.admin.password=${SUPER_ADMIN_PASSWORD}
+super.admin.email-verification-token=${SUPER_ADMIN_EMAIL_VERIFICATION_TOKEN}
 super.admin.country=${SUPER_ADMIN_COUNTRY}
 super.admin.region=${SUPER_ADMIN_REGION}
 super.admin.city=${SUPER_ADMIN_CITY}
@@ -90,6 +91,9 @@ email-verification.token.duration=${EMAIL_VERIFICATION_TOKEN_DURATION_IN_MINUTES
 password-reset.token.duration=${PASSWORD_RESET_TOKEN_DURATION_IN_MINUTES}
 
 app.logo.url=${APP_LOGO_URL}
+
+spring.liquibase.enabled=false
+spring.liquibase.change-log=classpath:migration/db.changelog-dev.xml
 
 #spring.datasource.test-on-borrow=true
 #spring.datasource.validation-query=SELECT 1;
