--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ ecomie.jwt.access-token.duration.minutes=${ACCESS_TOKEN_DURATION_IN_MINUTES}
 
 ## DATABASE INITIALIZATION SETUP
 # Allow initialization from data.sql file for both embedded and external database {always, embedded, never}
-spring.sql.init.mode=embedded
+spring.sql.init.mode=never
 # Wait for hibernate initialization first before loading data.sql scripts. Set it to false if schema is defined in schema.sql
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=false
 
 ## Database CONFIG
 spring.datasource.url=${DATASOURCE_URL}
@@ -32,9 +32,9 @@ spring.datasource.driverClassName=${DATASOURCE_DRIVERCLASSNAME}
 spring.jpa.show-sql=true
 spring.jpa.database=${DATABASE_TYPE}
 
-spring.jpa.generate-ddl=true
+spring.jpa.generate-ddl=false
 # {create, create-drop, update, validate, none}
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 # Enable spring data repos
@@ -92,8 +92,10 @@ password-reset.token.duration=${PASSWORD_RESET_TOKEN_DURATION_IN_MINUTES}
 
 app.logo.url=${APP_LOGO_URL}
 
-spring.liquibase.enabled=false
-spring.liquibase.change-log=classpath:migration/db.changelog-dev.xml
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:migrations/changelog/db.changelog-dev.xml
+
+anonymous-user-id=${ANONYMOUS_USER_ID}
 
 #spring.datasource.test-on-borrow=true
 #spring.datasource.validation-query=SELECT 1;
