--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       - ./.env
     volumes:
       - ./.env:/app/.env
-      - postgres-data:/var/lib/postgresql/18/
+      - postgres-data:/var/lib/postgresql
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U ${DATASOURCE_USERNAME}" ]
       interval: 5s
